# goats

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
common/: algebra.py  arrays.py  base.py  iotools.py  iterables.py  spelling.py
common/tests/: test_algebra.py  test_constants.py  test_elements.py  test_indexing.py  test_quantities.py
docs/: Makefile  conf.py  example.ipynb  make.bat
eprem/: datasets.py  observables.py  observers.py
src/goats/: __init__.py  goats.ini  goats.ini.template
src/goats/common/: __init__.py  algebra.py  aliased.py  base.py  constants.py  datasets.py  elements.py  indexing.py  iotools.py  iterables.py  numerical.py  physical.py  quantities.py
src/goats/core/: _variable.py  _variable_dev.py  algebra.py  algebraic.py  aliased.py  arrays.py  axis.py  base.py  computable.py  computed.py  constant.py  datafile.py  dataset.py  datasets.py  datatypes.py  functions.py  fundamental.py  index.py  indexing.py  interpolation.py  iotools.py  iterables.py  measurable.py  measurables.py  measured.py  metadata.py  metric.py  numerical.py  observable.py  observables.py  observed.py  observer.py  observing.py  operational.py  operations.py  operator.py  parameter.py  physical.py  plasma.py  quantities.py  (+5 more)
tests/: create_test_netcdf.py
tests/common/: test_algebra.py  test_aliased.py  test_arrays.py  test_iterables.py  test_numerical.py  test_physical.py  test_quantities.py
tests/core/: conftest.py  test_algebra.py  test_algebraic.py  test_aliased.py  test_arrays.py  test_constant.py  test_datafile.py  test_dataset.py  test_datasets.py  test_datatypes.py  test_fundamental.py  test_index.py  test_indexing.py  test_iterables.py  test_measurable.py  test_measurables.py  test_measured.py  test_metadata.py  test_metric.py  test_new_variable.py  test_numerical.py  test_operational.py  test_operations.py  test_operator.py  test_parameter.py  test_physical.py  test_plasma.py  test_quantities.py  test_spelling.py  test_symbolic.py  test_utilities.py  test_variable.py
tests/eprem/: conftest.py  test_basetypes.py  test_dataset.py  test_datasets.py  test_observables.py  test_observer.py  test_parameters.py  test_runtime.py
(+16 files in other folders)
