[tool.poetry]
name = "goats"
version = "0.0.1"
description = "A set of tools for analyzing heliophysical datasets"
authors = ["Matt Young"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
