[tool.poetry]
name = "goats"
version = "0.0.22"
description = "A set of tools for analyzing heliophysical datasets"
authors = ["Matt Young"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
netCDF4 = "^1.5.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "term: marks tests for algebraic terms",
    "expression: marks tests for algebraic expressions",
    "scalar: marks tests for quantities.Scalar",
    "vector: marks tests for quantities.Vector",
    "variable: marks tests for quantities.Variable",
]

