[tool.poetry]
name = "goats"
version = "0.2.5"
description = "A set of tools for analyzing heliophysical datasets"
authors = ["Matt Young"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.21.4,<1.23"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
netCDF4 = "^1.5.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "term: marks tests for algebraic terms",
    "expression: marks tests for algebraic expressions",
    "quantity: marks tests for measurable quantities",
    "scalar: marks tests for single-valued measurable quantities",
    "vector: marks tests for multi-valued measurable quantities",
    "variable: marks tests for the Variable data type",
]

